# Hand-X

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE-VISUAL-GUIDE.md  BROWSER-ARCHITECTURE-PLAN.md  CLAUDE.md  DIAGRAMS-USAGE.md  MERMAID-ARCHITECTURE-DIAGRAMS.md  PRD-DESKTOP-BRIDGE.md  README.md  REGRESSION-TESTING-STRATEGY.md  SHIP-READINESS-CHECKLIST.md  apply.sh  pyproject.toml  test_quick.py
.benchmarks/: shared_chromium_benchmark.py
.github/workflows/: build-binary.yml  cloud_evals.yml.disabled  docker.yml.disabled  lint.yml.disabled  notify-desktop.yml  package.yaml  publish.yml.disabled  security-scan.yml  sync-upstream.yml  test.yaml
.planning/: PREMISE-REVIEWS.md  PROJECT.md  REQUIREMENTS.md  REVIEWS-domhand-v3-parity.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: agent-ignores-filled-fields.md  domhand-pages12-regression.md  multi-select-chip-accumulation.md  skill-repeater-reentry.md
.planning/notes/: 2026-03-25-gs-oracle-address-combobox-regression.md  2026-03-25-oracle-click-wait-window.md  2026-03-25-oracle-hcm-address-cluster-handoff.md  2026-03-25-workday-fixture-todo.md
.planning/research/: ARCHITECTURE.md  DETERMINISTIC-FORM-OBSERVATION.md  DOMHAND-RPA-VERIFICATION.md  FEATURES.md  FORM-FIELD-STATE-VERIFICATION-DEEP-RESEARCH.md  PITFALLS.md  STACK.md  SUMMARY.md  V2.0-IMPLEMENTATION-PLAN.md  V2.0-OBSERVATION-OOD.md  V2.0-OBSERVATION-REBUILD-BRIEF.md  V3.0-VISION-OBSERVATION-OOD.md  V4.0-DOMHAND-ENRICHMENT-OOD.md  V4.1-VISUAL-MODEL-BAKEOFF-PLAN.md  V4.2-EMAIL-VERIFICATION-INTEGRATION-PLAN.md
browser_use/actor/: page.py
browser_use/agent/: service.py  variable_detector.py  views.py
browser_use/browser/: profile.py  session.py  session_manager.py  views.py
browser_use/tokens/: custom_pricing.py  mappings.py
browser_use/tools/: service.py
docs/: ARCHIVED_DOMHAND_FIRST_WORKER_PROMPT.md  COST_ACCOUNTING.md  DESKTOP_BRIDGE_SPEC.md
examples/: apply_to_job.py  apply_to_job_sample_data.json  workday_test.sh  workday_test_data.json
examples/getting_started/: 02_form_filling.py
examples/toy-job-app/: README.md  index.html
examples/toy-oracle-address/: README.md  index.html
examples/toy-oracle-hcm/: index.html
examples/toy-workday/: README.md  index.html
examples/use-cases/: apply_to_job.py
experiments/bu2-cost-probe/: README.md  run_cost_probe.py  sample_profile.json
experiments/jobapply-core/: .env.example  .gitignore  AUTH_DESIGN.md  CAPABILITY.md  EVAL.md  GAPS_AND_TODO.md  HANDOFF.md  HANDOFF_WORKDAY.md  HANDOFF_observe_act.md  HYPOTHESIS.md  MULTIPAGE_DESIGN.md  OBSERVE_ACT_BUILD_BRIEFING.md  OBSERVE_ACT_DESIGN.md  OBSERVE_ACT_PROOF.md  PLAN.md  PLAN_WORKDAY_REPEATERS.md  README.md  README_HANDOFF.md  SWEEP_RESULTS.md  TODO.md  WIDGETS_AND_REPEATERS.md  ats_ashby.py  ats_engine.py  ats_greenhouse.py  ats_lever.py  ats_workday.py  (+38 more)
ghosthands/: __init__.py  __main__.py  blockers.py  button_attempts.py  cli.py  cost_summary.py  env_bootstrap.py  main.py  runtime_learning.py  step_trace.py  tui.py
scripts/: browser_use_upstream_status.py  browser_use_visual_pricing_experiment.py  dev-deploy.sh  real_workday_batch_verification_experiment.py  run_test.py  test_browser_use.py  test_domhand_action.py  test_domhand_lab.sh  test_resume.json  visual_bakeoff.py
tests/: __init__.py
(+278 files in other folders)
