[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghosthands"
version = "0.1.0"
description = "GhostHands v2 — Job application automation agent built on browser-use"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    # browser-use is vendored in-tree (browser_use/), NOT installed from PyPI
    # We include its core deps directly:
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "asyncpg>=0.30",
    "httpx>=0.28",
    "cryptography>=44.0",
    "structlog>=24.4",
    "anthropic>=0.49",
    "playwright>=1.49",
    # browser-use deps (from upstream pyproject.toml):
    "python-dotenv>=1.0",
    "bubus>=0.1",
    "uuid-extensions>=1.0",
    "pyotp>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[project.scripts]
ghosthands = "ghosthands.main:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ghosthands"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build]
include = [
    "ghosthands/**/*.py",
    "browser_use/**/*.py",
    "browser_use/agent/system_prompts/*.md",
    "browser_use/code_use/system_prompt.md",
    "browser_use/dom/**/*.js",
]
